--- a/libraryprojectjava1/src/main/resources/application.properties
+++ b/libraryprojectjava1/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=libraryprojectjava1
 server.port=8080
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/library_db
+spring.datasource.username=root
+#spring.datasource.password=your_password
+
+spring.jpa.show-sql=true
