--- a/libraryprojectjava1/build.gradle
+++ b/libraryprojectjava1/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 }
 // prova branch metin
 
