--- a/libraryprojectjava1/src/main/resources/application.properties
+++ b/libraryprojectjava1/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/library_new
+spring.datasource.url=jdbc:mysql://localhost:3306/library_new2
 spring.datasource.username=root
 #spring.datasource.password=your_password
 
